--- a/AOOADFinalAssignment.csproj
+++ b/AOOADFinalAssignment.csproj
@@ -41,20 +41,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActiveState.cs" />
     <Compile Include="Administrator.cs" />
     <Compile Include="Agent.cs" />
     <Compile Include="Car.cs" />
     <Compile Include="Client.cs" />
+    <Compile Include="lapsedState.cs" />
     <Compile Include="MaturityPayOut.cs" />
     <Compile Include="Medical.cs" />
     <Compile Include="NormalPayOut.cs" />
+    <Compile Include="OverallClientList.cs" />
     <Compile Include="PartialPayOut.cs" />
     <Compile Include="PayOutType.cs" />
     <Compile Include="Policy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Pstate.cs" />
     <Compile Include="Receipt.cs" />
     <Compile Include="Rider.cs" />
+    <Compile Include="terminateState.cs" />
     <Compile Include="Travel.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
